fix: footer spacing fixes

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,8 +13,10 @@
 
 }
 
-.footer-links{
-    cursor: pointer;
+.footer-links-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .footer-text,
@@ -25,7 +27,12 @@
 
 .footer-text-link{
     cursor: pointer;
-    margin: 1rem 11rem;
+    margin: 1rem 0rem;
+    display: inline-block;
+}
+
+.footer-text-link:hover{
+    text-decoration: underline;
 }
 
 .footer-img {
