--- a/src/components/MenuBar/MenuBar.css
+++ b/src/components/MenuBar/MenuBar.css
@@ -8,8 +8,8 @@
     justify-content: center;
     transform: translateX(-50%);
     left: 50%;
-    height: 8vh;
     top: 1rem;
+    height: 8vh;
     width: min(90%, calc(100vw - 2rem));
     border-radius: 10px;
 }
@@ -21,7 +21,6 @@
     width: 100%;
     height: 100%;
     margin: 0 2.8rem;
-    padding: 0 1rem;
 }
 
 .left-menu-bar svg {
